fix(snackbar): make snackbar's label center alignment

--- a/src/components/snackbar/snackbar.scss
+++ b/src/components/snackbar/snackbar.scss
@@ -9,6 +9,8 @@
 
 .mdc-snackbar__label {
     color: var(--mdc-theme-on-surface);
+    display: flex;
+    justify-content: center;
 }
 
 .mdc-snackbar__actions {
